update_menu_code

--- a/public/admins/assets/css/custom.css
+++ b/public/admins/assets/css/custom.css
@@ -29,7 +29,7 @@
 .table-menu-code .menu_sub .switch label input[type=checkbox]:checked+.lever:after{
     left: 15px;
 }
-.table-menu-code .menu_sub .switch label input[type=checkbox]:checked+.lever.switch-col-teal {
+/* .table-menu-code .menu_sub .switch label input[type=checkbox]:checked+.lever.switch-col-teal {
     background-color: hsla(206, 73%, 56%, 0.5);
 }
 .table-menu-code .menu_sub .switch label input[type=checkbox]:checked+.lever {
@@ -37,7 +37,7 @@
 }
 .table-menu-code .menu_sub .switch label input[type=checkbox]:checked+.lever.switch-col-teal:after {
     background-color: #3B9AE1;
-}
+} */
 /* sub */
 .disable-button{
     pointer-events: none;
